--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,9 @@
-<p>
-  body works!
-</p>
+<div class="container">
+  <br />
+  <div style="text-align:center">
+    <img width="450" alt="Angular Logo" src="../../assets/img/Buy-On SF.png">
+  </div>
+  <div class="text-center">
+    <h1>Todo lo que Quieras Comprar!!!</h1>
+  </div>
+</div>
