--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,9 +1,95 @@
 <div class="container">
-  <br />
+  <p></p>
   <div style="text-align:center">
-    <img width="450" alt="Angular Logo" src="../../assets/img/Buy-On SF.png">
+    <img width="390" alt="Angular Logo" src="../../assets/img/Buy-On SF.png">
   </div>
   <div class="text-center">
-    <h1>Todo lo que Quieras Comprar!!!</h1>
+    <h1>Todo Producto de Papelería!!!</h1>
+  </div>
+</div>
+<div class="container productos">
+  <div class="card-group">
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://i.pinimg.com/originals/64/83/d5/6483d5c46efbcca3032b9f2e274017b2.png">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://www.officedepot.com.mx/medias/000054420.gif-300ftw?context=bWFzdGVyfHJvb3R8OTU5MHxpbWFnZS9naWZ8aDk4L2hkMy84Nzk3OTY1Nzc4OTc0LmdpZnwxNDQ1Y2RmYThmOWY4MDg0MjhmMmFhODUwNTQwYWE4NzIyMzUwNmM3NzFmY2UxMzViYmE4NGQ3MjQ1MjcxNWNh">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lumen.com.mx/Content/Images/productPics/238694004.jpg?v=20181115232114">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+  </div>
+  <div class="card-group">
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
+    <div class="card col-3 border-warning mb-2">
+      <p></p>
+      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <div class="card-body">
+        <h5 class="card-title">Cuaderno Norma</h5>
+        <p class="card-text">Nueva Versión 2019</p>
+        <p class="card-text"></p>
+        <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
+      </div>
+    </div>
   </div>
 </div>
