--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
-<app-body></app-body>
+<!--<app-navbar></app-navbar>
+<app-body></app-body>-->
+<router-outlet></router-outlet>
