--- a/src/app/categoria1/categoria1.component.html
+++ b/src/app/categoria1/categoria1.component.html
@@ -1,3 +1,4 @@
+<app-body></app-body>
 <div class="container productos">
   <div class="card-group">
     <div class="card col-3 border-warning mb-2">
