--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <div class="container">
-    <a class="navbar-brand" href="./"><i class="fab fa-opencart"></i> <b> Buy-ON</b></a>
+    <a class="navbar-brand" routerLink='/inicio'><i class="fab fa-opencart"></i> <b> Buy-ON</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,18 +12,18 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             Categorías
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Utiles Escolares</a>
-            <a class="dropdown-item" href="#">Libros</a>
+            <a class="dropdown-item" routerLink='/categoria1'>Utiles Escolares</a>
+            <a class="dropdown-item" routerLink='/categoria2'>Libros</a>
           </div>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink='/inicio'>Inicio <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
