--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -11,3 +11,41 @@ img.mediana {
     height: 250px;
     align-content: center;
 }
+
+.carousel-item {
+    min-height: 100%;
+    min-width: 100%;
+    width: 1000px;
+    height: 400px;
+    align-items: center;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    height: 100px;
+    width: 100px;
+    outline: transparent;
+    background-size: 100%, 100%;
+    border-radius: 50%;
+    border: 1px solid transparent;
+    background-image: none;
+}
+
+.carousel-control-next-icon:after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f061";
+    display: inline-block;
+    vertical-align: middle;
+    font-weight: 900;
+    font-size: 55px;
+    color: #6C757D;
+}
+
+.carousel-control-prev-icon:after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f060";
+    display: inline-block;
+    vertical-align: middle;
+    font-weight: 900;
+    font-size: 55px;
+    color: #6C757D;
+}
