--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 <app-body></app-body>
-<div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div class="container" align="center">
+    <div id="carouselExampleIndicators" class="carousel slide col-12" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -8,17 +8,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://previews.123rf.com/images/ashumskiy/ashumskiy1311/ashumskiy131100014/23903231-escuela-de-encuadre-de-papeler%C3%ADa-para-la-escuela-y-la-oficina.jpg" class="d-block w-100" alt="...">
+                <img src="http://papeleriagaco.com.do/wp-content/uploads/2016/06/Banner-Pagina-Web-2.png" class="d-block w-100"
+                    alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://i.ytimg.com/vi/rYdo8zwY0HM/maxresdefault.jpg" class="d-block w-100" alt="...">
+                <img src="https://static.miweb.padigital.es/var/m_8/8d/8de/25169/36226-Papeleria-Rosi-banner-3.png"
+                    class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="http://www.calipage.es/medias/full-banner-vuelta-cole.jpg?context=bWFzdGVyfG1haW4tYmFubmVyfDIwNzgzNjl8aW1hZ2UvanBlZ3xtYWluLWJhbm5lci9oMWYvaDAxLzg5Mjk2NTc0MjE4NTQuanBnfGU5MWNmZWI1NmI2NmYyY2YxMTgwMTk4ODA5ODVjYmVkMTJkYzhmNzQ3Zjg4OTI2OWZmOGRmMTY2NjBhMjg0MjQ"
+                    class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" aria-hidden="true">
+            </span>
             <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
