Modificación página de inicio

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -31,3 +31,98 @@
         </a>
     </div>
 </div>
+<br />
+<div class="container container-productos-inicio">
+    <div class="card-group">
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://officemax.vteximg.com.br/arquivos/ids/167307-1000-1000/88217_3.jpg?v=636214084210400000">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://multimedia.3m.com/mws/media/902809F/scotch-product-for-peru.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://www.lumen.com.mx/Content/Images/productPics/234120.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://www.selfpaper.com/imagenes/marcad364g.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+    </div>
+    <div class="card-group">
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="http://www.papeleria-andromeda.es/f-500-0-data/foto/328_Lapiz-Carioca-12-Colores-Triangular.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://jellini.com/galery/G-PEL-53101600.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://images-na.ssl-images-amazon.com/images/I/41SZGVUxAFL._SY355_.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+        <div class="card col-3 border-warning mb-2">
+            <p></p>
+            <img class="mediana img-center" src="https://d2kx81irxb72bi.cloudfront.net/cs/products/31/01/78/550x550.jpg">
+            <div class="card-body">
+                <h5 class="card-title">Cuaderno Norma</h5>
+                <p class="card-text">Nueva Versión 2019</p>
+                <p class="card-text"></p>
+                <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
+                    Comprar</button>
+            </div>
+        </div>
+    </div>
+</div>
