--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
       <!-- PASSWORD INPUT -->
       <label for="password">Contraseña</label>
       <input type="password" placeholder="Contraseña">
-      <input type="submit" value="ACCEDER">
+      <input type="submit" value="ACCEDER" routerLink='/inicio'>
       <a href="www.facebook.com">OLVIDASTE TU CONTRASEÑA ?</a><br>
       <a href="www.youtube.com">NO TIENES UNA CUENTA?</a>
     </form>
