--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
 
       <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="#"> <i class="fas fa-shopping-cart"></i>
         Carrito</a>
-      <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="#"><i class="fas fa-user"></i>
+      <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/login'><i class="fas fa-user"></i>
         Registrate</a>
 
     </div>
