Modificación de inicio y creación del footer

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -70,9 +70,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -81,9 +81,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -92,9 +92,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -103,9 +103,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
     </div>
@@ -116,9 +116,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -127,9 +127,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -138,9 +138,9 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
         <div class="card col-3 border-warning mb-2">
@@ -149,10 +149,12 @@
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
-                <p class="card-text"></p>
+                <h2 class="precio text-center bg-secondary">$1.50</h2>
                 <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i>
-                    Comprar</button>
+                    Al Carrito</button>
             </div>
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
