--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink='/categoria1'>Utiles Escolares</a>
-            <a class="dropdown-item" routerLink='/categoria2'>Libros</a>
+            <a class="dropdown-item" routerLink='/categoria2'>Cuadernos</a>
           </div>
         </li>
 
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Creador</a>
+          <a class="nav-link" href="#">Creadores</a>
         </li>
 
       </ul>
