--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,48 @@
-<p>
-  footer works!
-</p>
+<footer class="footer-distributed">
+
+  <div class="footer-left">
+
+    <img width="300" alt="Angular Logo" src="../../assets/img/Buy On.png">
+    <br />
+    <p class="footer-company-name">Buy-On Instituto Yavirac &copy; 2019</p>
+  </div>
+
+  <div class="footer-center">
+
+    <div>
+      <i class="fa fa-map-marker"></i>
+      <p><span>Av.Ambato y Av.García Moreno</span> Quito</p>
+    </div>
+
+    <div>
+      <i class="fa fa-phone"></i>
+      <p>+593 0983659636</p>
+    </div>
+
+    <div>
+      <i class="fa fa-envelope"></i>
+      <p><a href="mailto:support@company.com">Buy-On@gmail.com</a></p>
+    </div>
+
+  </div>
+
+  <div class="footer-right">
+
+    <p class="footer-company-about">
+      <span>Nosotros</span>
+      Este es un prototipo de página web para el comercio electrónico, con el fin de ser presentado como proyecto del
+      tercer semestre de la carrera de Desarrollo de Software.
+    </p>
+
+    <div class="footer-icons">
+
+      <a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
+      <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
+      <a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+      <a href="#"><i class="fab fa-youtube fa-lg"></i></a>
+
+    </div>
+
+  </div>
+
+</footer>
