--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -49,3 +49,12 @@ img.mediana {
     font-size: 55px;
     color: #6C757D;
 }
+
+.card-body .precio {
+    border: 1px solid #6C757D;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    padding: 0px;
+    width: 205px;
+    height: 40px;
+}
