--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,7 +30,7 @@
 
     <p class="footer-company-about">
       <span>Nosotros</span>
-      Este es un prototipo de página web para el comercio electrónico, con el fin de ser presentado como proyecto del
+      Esta es la versión 0.1 de la página web para el comercio electrónico, con el fin de ser presentado como proyecto del
       tercer semestre de la carrera de Desarrollo de Software.
     </p>
 
