--- a/src/app/categoria2/categoria2.component.html
+++ b/src/app/categoria2/categoria2.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -17,7 +17,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -49,7 +49,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -59,7 +59,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
@@ -79,7 +79,7 @@
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
-        <p class="card-text"></p>
+        <h2 class="precio text-center bg-secondary">$1.50</h2>
         <button type="button" class="btn btn-block btn-outline-secondary"><i class="fas fa-cart-plus"></i> Comprar</button>
       </div>
     </div>
