--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,7 +37,7 @@
         <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fas fa-search"></i> Buscar</button>
       </form>
 
-      <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="#"> <i class="fas fa-shopping-cart"></i>
+      <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/carrito'> <i class="fas fa-shopping-cart"></i>
         Carrito</a>
       <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/login'><i class="fas fa-user"></i>
         Registrate</a>
