--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -4,29 +4,51 @@
   <div class="card col-12 bg-transparent border-secondary">
     <div class="card-body card-group">
       <div class="col-4">
-        <h4 class="card-title text-center">Productos</h4>
+        <h4 class="producto text-center">Productos</h4>
+        <h5 class="card-text">
+          Cuaderno Norma 2019
+        </h5>
         <h5 class="card-text">
           Cuaderno Norma 2019
         </h5>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <h4 class="card-title text-center">Cantidad</h4>
-        <h5 class="card-text">
+        <h5 class="card-text text-right">
+          1
+        </h5>
+        <h5 class="card-text text-right">
           1
         </h5>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <h4 class="card-title text-center">Precio</h4>
-        <h5 class="card-text">
+        <h5 class="card-text text-right">
+          $1.50
+        </h5>
+        <h5 class="card-text text-right">
           $1.50
         </h5>
       </div>
-      <div class="col-2">
-        <h4 class=" text-center"></h4>
+      <div class="col-1">
+        <h4 class="opcion text-center">Item</h4>
         <h5 class="card-text">
-          <br />
-          <button type="button" class="btn btn-outline-danger btn-block"><i class="fas fa-trash-alt"></i> Borrar</button>
+          <button type="button" class="item-btn btn btn-outline-danger btn-block"><i class="fas fa-trash-alt fa-lg"></i></button>
         </h5>
+        <h5 class="card-text">
+          <button type="button" class="item-btn btn btn-outline-danger btn-block"><i class="fas fa-trash-alt fa-lg"></i></button>
+        </h5>
+      </div>
+      <div class="col-1">
+        <h4 class="total text-center">Total</h4>
+        <h5 class="card-text text-right">
+          $3.00
+        </h5>
+      </div>
+      <div class="col-1">
+        <h4 class="card-title text-center">Ordenar</h4>
+        <button type="button" class="item-btn2 btn btn-outline-success btn-block" routerLink='/login'><i class="fas fa-cash-register fa-lg"></i>
+          Listo</button>
       </div>
     </div>
   </div>
