--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,14 +15,14 @@
     <h1>REGISTRO BUY-ON</h1>
     <form>
       <!-- USERNAME INPUT -->
-      <label for="username">Usuario</label>
-      <input type="text" placeholder="Usuario">
+      <label for="username">Nombre</label>
+      <input type="text" placeholder="Nombre">
+      <br />
       <!-- PASSWORD INPUT -->
-      <label for="password">Contraseña</label>
-      <input type="password" placeholder="Contraseña">
-      <input type="submit" value="ACCEDER" routerLink='/inicio'>
-      <a href="www.facebook.com">OLVIDASTE TU CONTRASEÑA ?</a><br>
-      <a href="www.youtube.com">NO TIENES UNA CUENTA?</a>
+      <label for="password">Numero de Cédula</label>
+      <input type="password" placeholder="Cédula">
+      <br />
+      <input type="submit" value="CONFIRMAR" routerLink='/inicio'>
     </form>
   </div>
 </body>
