--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,7 +1,7 @@
 <app-body></app-body>
 <div class="container">
   <h1 class="titulo bg-secondary" align='center'><i class="fas fa-shopping-cart"></i> Carrito</h1>
-  <div class="card col-12 bg-transparent border-secondary">
+  <div class="card col-12 bg-white border-secondary">
     <div class="card-body card-group">
       <div class="col-4">
         <h4 class="producto text-center">Productos</h4>
