modificación de las pantallas

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,16 +31,19 @@
         </li>
 
       </ul>
-
+      <!--
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Busca Un Artículo?" aria-label="Buscar ...">
         <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="fas fa-search"></i> Buscar</button>
       </form>
-
-      <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/carrito'> <i class="fas fa-shopping-cart"></i>
-        Carrito</a>
+      -->
+      <a class="carrito-btn btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/carrito'>
+        <i class="fas fa-shopping-cart"></i>
+        Carrito
+      </a>
+      <!--
       <a class="btn btn-outline-warning d-lg-inline-block mb-3 mb-md-0 ml-md-3" routerLink='/login'><i class="fas fa-user"></i>
-        Registrate</a>
+        Registrate</a>-->
 
     </div>
 
