--- a/src/app/categoria2/categoria2.component.html
+++ b/src/app/categoria2/categoria2.component.html
@@ -3,7 +3,7 @@
   <div class="card-group">
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <img class="mediana img-center" src="../../assets/img/Norma1.jpg">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -13,7 +13,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://i.pinimg.com/originals/64/83/d5/6483d5c46efbcca3032b9f2e274017b2.png">
+      <img class="mediana img-center" src="../../assets/img/Norma2.png">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -23,7 +23,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://www.officedepot.com.mx/medias/000054420.gif-300ftw?context=bWFzdGVyfHJvb3R8OTU5MHxpbWFnZS9naWZ8aDk4L2hkMy84Nzk3OTY1Nzc4OTc0LmdpZnwxNDQ1Y2RmYThmOWY4MDg0MjhmMmFhODUwNTQwYWE4NzIyMzUwNmM3NzFmY2UxMzViYmE4NGQ3MjQ1MjcxNWNh">
+      <img class="mediana img-center" src="../../assets/img/Norma3.jfif">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -33,7 +33,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lumen.com.mx/Content/Images/productPics/238694004.jpg?v=20181115232114">
+      <img class="mediana img-center" src="../../assets/img/Norma4.gif">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -45,7 +45,7 @@
   <div class="card-group">
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <img class="mediana img-center" src="../../assets/img/Estilo1.jfif">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -55,7 +55,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <img class="mediana img-center" src="../../assets/img/Estilo2.jpg">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -65,7 +65,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <img class="mediana img-center" src="../../assets/img/Scribe1.jpg">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
@@ -75,7 +75,7 @@
     </div>
     <div class="card col-3 border-warning mb-2">
       <p></p>
-      <img class="mediana img-center" src="https://lh3.googleusercontent.com/nnYMBm9zgfUfNS3NR6dXgxuoOrPZWZxQ1iGSx3s2SJqWDa7xuQF2vxVZK91BvJixb0AvCmo3S3uGd6bjgOOjEGoqYTHH8ODLd3M">
+      <img class="mediana img-center" src="../../assets/img/Scribe2.webp">
       <div class="card-body">
         <h5 class="card-title">Cuaderno Norma</h5>
         <p class="card-text">Nueva Versión 2019</p>
