--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -8,16 +8,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="http://papeleriagaco.com.do/wp-content/uploads/2016/06/Banner-Pagina-Web-2.png" class="d-block w-100"
-                    alt="...">
+                <img src="../../assets/img/Banner1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://static.miweb.padigital.es/var/m_8/8d/8de/25169/36226-Papeleria-Rosi-banner-3.png"
-                    class="d-block w-100" alt="...">
+                <img src="../../assets/img/Banner2.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="http://www.calipage.es/medias/full-banner-vuelta-cole.jpg?context=bWFzdGVyfG1haW4tYmFubmVyfDIwNzgzNjl8aW1hZ2UvanBlZ3xtYWluLWJhbm5lci9oMWYvaDAxLzg5Mjk2NTc0MjE4NTQuanBnfGU5MWNmZWI1NmI2NmYyY2YxMTgwMTk4ODA5ODVjYmVkMTJkYzhmNzQ3Zjg4OTI2OWZmOGRmMTY2NjBhMjg0MjQ"
-                    class="d-block w-100" alt="...">
+                <img src="../../assets/img/Banner3.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -66,7 +63,7 @@
     <div class="card-group">
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://officemax.vteximg.com.br/arquivos/ids/167307-1000-1000/88217_3.jpg?v=636214084210400000">
+            <img class="mediana img-center" src="../../assets/img/Norma1.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -77,7 +74,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://multimedia.3m.com/mws/media/902809F/scotch-product-for-peru.jpg">
+            <img class="mediana img-center" src="../../assets/img/Scotch.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -88,7 +85,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://www.lumen.com.mx/Content/Images/productPics/234120.jpg">
+            <img class="mediana img-center" src="../../assets/img/Compás.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -99,7 +96,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://www.selfpaper.com/imagenes/marcad364g.jpg">
+            <img class="mediana img-center" src="../../assets/img/Resaltador.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -112,7 +109,7 @@
     <div class="card-group">
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="http://www.papeleria-andromeda.es/f-500-0-data/foto/328_Lapiz-Carioca-12-Colores-Triangular.jpg">
+            <img class="mediana img-center" src="../../assets/img/Pinturas.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -123,7 +120,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://jellini.com/galery/G-PEL-53101600.jpg">
+            <img class="mediana img-center" src="../../assets/img/Témperas.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -134,7 +131,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://images-na.ssl-images-amazon.com/images/I/41SZGVUxAFL._SY355_.jpg">
+            <img class="mediana img-center" src="../../assets/img/Grapadora.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
@@ -145,7 +142,7 @@
         </div>
         <div class="card col-3 border-warning mb-2">
             <p></p>
-            <img class="mediana img-center" src="https://d2kx81irxb72bi.cloudfront.net/cs/products/31/01/78/550x550.jpg">
+            <img class="mediana img-center" src="../../assets/img/Títere.jpg">
             <div class="card-body">
                 <h5 class="card-title">Cuaderno Norma</h5>
                 <p class="card-text">Nueva Versión 2019</p>
